after removing conflicts and exceptions due to pom file and sign in page